# modbus-iiot-rs

./: Cargo.toml  README.md
src/core/: datatransformation.rs  ethernet.rs  methods.rs  modbusreturn.rs  modbustelegram.rs
src/network/: common.rs
src/tcp/: master.rs  masteraccess.rs  streamtelegram.rs
