[package]
name = "modbus-iiot-rs"
version = "0.0.1"
edition = "2021"
authors = ["Stepanov Denis <stepanov.d.m@yandex.ru>"]
repository = "https://github.com/stepanov-denis/modbus-iiot-rs"
license = "MPL-2.0"
description="A pure Rust library for working with Modbus in IoT/IIoT projects. It is based on the Modbus protocol specification with the focus on no or few dependencies."
keywords = ["modbus", "fieldbus", "iiot", "opcua", "automation"]
readme = "README.md"

[badges]
travis-ci = { repository = "BiancoRoyal/modbus-iiot-rust" }
coveralls = { repository = "BiancoRoyal/modbus-iiot-rust", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "BiancoRoyal/modbus-iiot-rust" }
is-it-maintained-open-issues = { repository = "BiancoRoyal/modbus-iiot-rust" }
